# modrinth.py

./: .gitignore  SECURITY.md  license.md  pyproject.toml  requirements.txt  secutity.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
docs/: readme.md
modrinth/: __init__.py  authentication.py  projects.py  users.py
