[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modrinth"
version = "0.1.2"
description = " Interact with Modrinth's Labrinth API through Python."
readme = "docs/readme.md"
authors = [{ name = "Beta Pictoris", email = "beta@ozx.me" }]
license = { file = "license.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["minecraft", "modrinth", "modrinth-api", "labrinth"]
dependencies = [
    "requests",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/BetaPictoris/modrinth.py"

[project.scripts]
